# personal-reference-claude-code

./: .gitignore  .mcp.json.example  README.md  TASKS.md  pyproject.toml
.claude/commands/: gdoc-sync.md  notion-sync.md  summarize.md  sync-tasks.md
.claude/skills/: sync-protocol.md
.claude/workflows/content/: README.md
.claude/workflows/content/agents/: planner.md  summarizer.md  validator.md
.claude/workflows/research/: README.md
.claude/workflows/research/agents/: executor.md
.claude/workflows/research/skills/: SKILL.md  link-summarization.md  person-research.md  tech-research.md  term-definition.md
assets/scripts/: google_calendar_mcp.py  google_docs_mcp.py
capture/: google-tasks-inbox.md
